<resources>
  <string name="app_name">OrthodoxApp</string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="nav_header_title">Android Studio</string>
  <string name="nav_header_subtitle">android.studio@android.com</string>
  <string name="nav_header_desc">Navigation header</string>
  <string name="action_settings">Settings</string>

  <string name="menu_home">Home</string>
  <string name="menu_gallery">Gallery</string>
  <string name="menu_slideshow">Slideshow</string>
  <string name="menu_tools">Tools</string>
  <string name="menu_share">Share</string>
  <string name="menu_send">Send</string>
  <string name="menu_news">News</string>
  <string name="fsname">Name Surname</string>
  <string name="status">Status</string>
  <string name="text_post">some text for post</string>
  <string name="number">9999</string>
  <string name="some_msg">some msg</string>
  <string name="time">00:00</string>
  <string name="menu_channels">Channels</string>
  <string name="communicate">Communicate</string>
  <string name="follow">follow</string>
  <string name="followers">followers</string>
  <string name="posts">posts</string>
  <string name="following">following</string>
  <string name="profile">Profile</string>
  <string name="title_activity_login">Login</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="welcome">"Welcome !"</string>
  <string name="invalid_username">Not a valid username</string>
  <string name="invalid_password">Password must be >6 characters</string>
  <string name="login_failed">"Login failed"</string>

  <string name="long_text">Miusov, as a man man of breeding and deilcacy,could not but feel some inwrd qualms, when he reached the Father Superiorswith Ivan: he felt ashamed of havin lost his temper. He felt that he oughtto have disdaimed that despicable wretch, Fyodor Pavlovitch, too much to havebeen upset by him in Father Zossimas cell, and so to have forgotten himself. "Teh monkswere not to blame, in any case," he reflceted, on the steps. "And if they're decentpeople here (and the Father Superior, I understand, is a nobleman) why not be friendlyand courteous withthem? I won't argue, I'll fall in with everything, I'll win them bypolitness, and show them that I've nothing to do with that Aesop, thta buffoon,that Pierrot, and have merely been takken in over this affair, just as they have.</string>
  <string name="create_acc">Sign up</string>
  <string name="pls_enter_email">Please enter email</string>
  <string name="pls_enter_right_email">Please enter right email</string>
  <string name="pass_length">Password length less than 6</string>
  <string name="pass_not_equals">Password not coincide</string>
  <string name="email_or_pass_not_right">E-mail or password is not right</string>
  <string name="right_registration">Registration is successful!!! GO LOGIN</string>
  <string name="forgot_pass">Forgot Password?</string>
  <string name="rest_right">Password reset link was sent your email address</string>
  <string name="error_send_pass">Mail sending error</string>
  <string name="auth_fail">Authentication Failed.</string>
  <string name="dialog">Dialog</string>
  <string name="please_wait">Registration. Please wait…</string>

  <string name="map">Map</string>
  <string name="logout_from_your_account">logout from account</string>
  <string name="Unsubscribe">Unsubscribe</string>
  <string name="i_am_activist">I am activist and i want to help lay out the schedule</string>
  <string name="agreement">IF YOU ARE READY TO TAKE RESPONSIBILITY FOR INFORMING PEOPLE, FELL FREE TO AGREE</string>
  <string name="submit_new_password_link">Submit New Password Link</string>
  <string name="email">Email</string>
  <string name="password">Password</string>
  <string name="log_in">LOG IN</string>
  <string name="input_first_name">First Name</string>
  <string name="input_surname">Surname</string>
  <string name="input_email">Email</string>
  <string name="repeat_password">Repeat password</string>
  <string name="go_login">GO LOGIN</string>
  <string name="register">REGISTER</string>
  <string name="enter_message">Enter message</string>

  <string name="orthodoxapp">OrthodoxApp</string>
  <string name="ok">ok</string>
  <string name="cancel">cancel</string>
  <string name="send">send</string>

  <string name="not_all_inf">You did not enter all the information about the upcoming event</string>
  <string name="gps_network_not_enabled">GPS not enabled</string>
  <string name="open_location_settings">open settings</string>
</resources>
