<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/login_layout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@drawable/background"
  tools:context=".ui.LoginActivity">

  <Button
    android:id="@+id/btnLogin"
    android:layout_width="200dp"
    android:layout_height="55dp"
    android:layout_marginBottom="20dp"
    android:background="@drawable/buttons_shape"
    android:text="@string/log_in"
    app:layout_constraintBottom_toTopOf="@+id/btnSignInGoogle"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/btnRegister"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="55dp"
    android:background="@drawable/buttons_shape"
    android:text="@string/create_acc"
    app:layout_constraintBottom_toTopOf="@+id/btnLogin"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <Button
    android:id="@+id/btnForgotPass"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:padding="8dp"
    android:background="@drawable/buttons_shape"
    android:text="@string/forgot_pass"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />
  <ProgressBar
    android:id="@+id/progressBarLogin"
    style="?android:attr/progressBarStyleHorizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:indeterminate="true"
    android:visibility="invisible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
  <TextView
    android:id="@+id/textView4"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:layout_gravity="center"
    android:padding="8dp"
    android:background="@drawable/bg_rectangle_button"
    android:text="@string/orthodoxapp"
    android:textSize="24sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.502"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/progressBarLogin" />

  <com.google.android.gms.common.SignInButton
    android:id="@+id/btnSignInGoogle"
    android:layout_width="wrap_content"
    android:layout_height="50dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent" />


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/et_input_email"
    style="@style/TextInputLayoutStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/textView4">

    <EditText
      android:id="@+id/etEmail"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:hint="@string/email"
      android:inputType="textEmailAddress" />
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/et_input_password"
    style="@style/TextInputLayoutStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="4dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/et_input_email">
    <EditText
      android:id="@+id/etPassword"
      android:layout_width="200dp"
      android:layout_height="wrap_content"
      android:hint="@string/password"
      android:inputType="textPassword" />
  </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>