<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.example.orthodoxapp.ui.profile.ProfileFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewProfile"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appbar_profile"
        android:padding="10dp"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_profile"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.PopupOverlay">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@raw/profile_background"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/fragment_profile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="16dp"
                android:paddingBottom="16dp"
                app:layout_collapseMode="parallax">

                <Button
                    android:id="@+id/btn_follow"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:background="@drawable/profile_btn_follow_shape"
                    android:text="@string/follow"
                    android:textColor="@color/colorWhite"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_posts" />

                <TextView
                    android:id="@+id/tv_number_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:text="@string/number"
                    app:layout_constraintEnd_toStartOf="@+id/tv_posts_number"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_posts_number" />

                <TextView
                    android:id="@+id/tv_followers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/followers"
                    app:layout_constraintEnd_toStartOf="@+id/tv_posts"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/tv_posts" />

                <TextView
                    android:id="@+id/tv_posts_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/number"
                    app:layout_constraintEnd_toStartOf="@+id/tv_number_following"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_number_followers"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatImageView" />

                <TextView
                    android:id="@+id/tv_posts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/posts"
                    app:layout_constraintEnd_toStartOf="@+id/tv_following"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_followers"
                    app:layout_constraintTop_toBottomOf="@+id/tv_posts_number" />

                <TextView
                    android:id="@+id/tv_number_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:text="@string/number"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_posts_number"
                    app:layout_constraintTop_toTopOf="@+id/tv_posts_number" />

                <TextView
                    android:id="@+id/tv_following"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/following"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/tv_posts"
                    app:layout_constraintTop_toTopOf="@+id/tv_posts" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/appCompatImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_avatar_svgrepo_com"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                </androidx.appcompat.widget.AppCompatImageView>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>



    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_add_24px"
        app:layout_anchorGravity="bottom|right"
        app:layout_anchor="@id/appbar_profile"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>